[tool.poetry]
name = "clock"
version = "0.1.0"
description = ""
authors = ["Geoff <geoffreybelcher@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
poethepoet = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
